completed section 10 on jdbc template.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 #spring.datasource.username=sa
 #spring.datasource.password=password
 spring.jpa.database=mysql
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.defer-datasource-initialization=false
